# TRACER

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  model.py  pyproject.toml  setup.cfg  setup.py  third_party_licenses.csv  third_party_requirements.txt
.github/workflows/: build-docker.yml
3D_graph_pruning/: 3D_kNN_NPMI_pruning.ipynb  connectivity_newnodes_iter2.csv  connectivity_newnodes_iter3.csv  connectivity_newnodes_iter4.csv
Archived/3D_graph_pruning/: NPMI.csv  connectivity_newnodes_iter1.csv
Archived/Clustering_using_Delaunay/: Gene_Embedding_w_Cluster.ipynb
Archived/CyCIF/: phenotyping.ipynb
Archived/Gene_embedding_choice/: gene_clustering.ipynb
Archived/Jupyter_Notebook/: Patient4.ipynb
Archived/Tiling/: giant_graph_construction.ipynb
Clustering_using_Delaunay/Data/: gene_embedding_dict.pt
CyCIF/Patient1/: Xenium_1_Patient_1_Histogram_Values.csv
CyCIF/Patient2/: Xenium_2_Patient_2_Histogram_Values.csv
CyCIF/Patient3/: Xenium_2_Patient_3_Histogram_Values.csv
CyCIF/Patient4/: Xenium_2_Patient_4_Histogram_Values.csv
CyCIF/Patient5/: Xenium_1_Patient_5_Histogram_Values.csv
CyCIF/Patient6/: Xenium_1_Patient_6_Histogram_Values.csv
Tiling/tile_edges/: tile_00001.parquet  tile_00002.parquet  tile_00003.parquet  tile_00007.parquet  tile_00008.parquet  tile_00010.parquet  tile_00018.parquet  tile_00019.parquet  tile_00020.parquet  tile_00021.parquet  tile_00030.parquet  tile_00031.parquet  tile_00032.parquet  tile_00033.parquet  tile_00046.parquet  tile_00047.parquet  tile_00059.parquet  (+17 more)
dev/: NPMI_cell_purity_calculation.ipynb
examples/: 3D_simulation.ipynb  README.md  demo.ipynb  example_cell_geometries.csv  example_transcripts.csv  refine_segmentation.py
slurm/: run_breast_seed42.slurm  run_ileum_seed42.slurm  run_lung_seed42.slurm  run_melanoma_seed42.slurm
tutorials/: entity_type_counts_all_stages.csv  entity_type_stage_counts.py
(+90 files in other folders)
