[metadata]
name = tracer
version = 0.1.0
description = TRACER core library
long_description = file: README.md
long_description_content_type = text/markdown
author = Long Yuan
author_email = lyuan13@jhmi.edu
license = Apache-2.0
url = https://github.com/imlong4real/TRACER

[options]
packages = find:
package_dir =
    = src
install_requires =
    numpy>=1.21
    pandas>=1.3
    geopandas>=0.12
    shapely>=2.0
    scikit-learn>=1.0
    pymetis>=0.2
    matplotlib>=3.5
    pyarrow>=8.0
python_requires = >=3.9

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.0
    black
    flake8
docs =
    sphinx
